--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <version>3.1.3</version>
     </parent>
     <groupId>com.ligg</groupId>
-    <artifactId>blibli</artifactId>
+    <artifactId>KH-Service</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -121,6 +121,12 @@
             <artifactId>junit-jupiter-engine</artifactId>
             <version>5.9.2</version>
             <scope>test</scope>
+        </dependency>
+
+        <!-- 添加spring-session-jdbc依赖 -->
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-jdbc</artifactId>
         </dependency>
 
     </dependencies>
